# tmdat_tools

./: CMakeLists.txt  README.md  compile.sh  cut_data.sh  file_list_interest.txt
example/: main.cpp
inc/: data_cutter.h  utils.h
src/: data_cutter.cpp  utils.cpp
src/.ipynb_checkpoints/: data_cutter-checkpoint.cpp
